# cs-legit

./: .gitignore  .gitmodules  BUILD.bat  BUILD_INSTRUCTIONS.md  BUILD_SIMPLE.bat  CMakeLists.txt  PROJECT_SUMMARY.md  README.md  Untitled  hyper-reV - memory introspection + reverse engineering powered by leveraging Hyper-V - UnKnoWnCheaTs.html  open-admin.command  Текстовый документ (2).txt  Текстовый документ (3).txt  Текстовый документ.txt
.github/workflows/: build.yml  full-release.yml  hyper-rev-build.yml  launcher.yml  release.yml  rust-cs2.yml  rust-driver.yml  rust-release.yml  rust-v2.yml
backend/: README.md
backend/admin-panel/: index.html
backend/backend/: package.json
backend/backend/tests/: integration.test.js
backend/docs/: DEPLOYMENT.md
backend/public/: index.html
backend/storage/offsets/: cs2_info.json  dayz.json
cheats/: Untitled
cheats/cs2/: CMakeLists.txt
cheats/cs2-rust/: Cargo.toml
cheats/cs2-rust/driver/: Cargo.toml  ExternaDriver.sln  ExternaDriver.vcxproj  README.md  build.bat  build.rs  install.bat  uninstall.bat
cheats/cs2-rust/driver/src/: communication.rs  lib.rs  memory.rs  ntdef.rs  process.rs
cheats/cs2-rust/src/: config.rs  driver_client.rs  esp.rs  main.rs  memory.rs  offsets.rs  overlay.rs  scanner.rs
cheats/cs2/src/: embedded_driver.hpp  embedded_driver_data.hpp  esp_menu.hpp  main.cpp  syscall.asm
cheats/externa-rust-v2/: Cargo.toml  DOCUMENTATION.md  build.bat  run.bat
cheats/externa-rust-v2/assets/: .gitkeep  README.md  iqvw64e.sys  laithdriver.sys
cheats/externa-rust-v2/src/: main.rs  memory.rs  offsets.rs  overlay.rs  syscall.rs
cheats/externa-rust-v2/src/game/: entity.rs  math.rs  mod.rs  offsets.rs
cheats/externa-rust-v2/src/memory/: driver.rs  driver_loader.rs  embedded_driver.rs  handle.rs  hyperv.rs  kdmapper.rs  mod.rs  scanner.rs  syscall.rs
cheats/externa-rust-v2/src/overlay/: renderer.rs
cs-legit-8f087766b76ef1a3ddc1e88fced22b21c21cdf2f/: .gitignore
cs-legit-8f087766b76ef1a3ddc1e88fced22b21c21cdf2f/.github/workflows/: internal.yml
cs-legit-8f087766b76ef1a3ddc1e88fced22b21c21cdf2f/externa/src/: syscall.asm
cs-legit-8f087766b76ef1a3ddc1e88fced22b21c21cdf2f/launcher/: CMakeLists.txt
cs-legit-8f087766b76ef1a3ddc1e88fced22b21c21cdf2f/launcher/src/: xorstr.hpp
cs-legit-8f087766b76ef1a3ddc1e88fced22b21c21cdf2f/output/: animationsystem_dll.cs  buttons.cs  client_dll.cs  client_dll.hpp  engine2_dll.cs  engine2_dll.hpp  networksystem_dll.cs  networksystem_dll.hpp  offsets.rs  panorama_dll.hpp  particles_dll.hpp  particles_dll.rs  rendersystemdx11_dll.rs  schemasystem_dll.rs  steamaudio_dll.rs  vphysics2_dll.hpp
docs/: ANTI_CHEAT_EVASION.md  ANTI_DETECTION_IMPROVEMENTS.md  COMPLETION_SUMMARY.md  DESIGN_SYSTEM.md  ESP_MENU_DESIGN_MOCKUP.md  FINAL_INTEGRATION.md  LAUNCHER_DESIGN_MOCKUP.md  LAUNCHER_INTEGRATION.md  NGINX_OPTIMIZATION.md  PROJECT_ROADMAP.md  RUST_VS_CPP.md  SECURITY_STABILITY_UPDATE.md
externa/: CMakeLists.txt
externa/src/: esp_menu.hpp  main.cpp
hyper-rev/: README.md
hyper-rev/scripts/: 01-create-restore-point.ps1  02-backup-bootloader.bat  03-install-nasm.ps1  04-clone-repos.bat  05-build-edk2.bat  06-build-hyper-rev.bat  07-deploy.bat  recovery-hyper-rev.bat
hyper-rev/src/: hyper-reV.sln  load-hyper-reV.bat
hyper-rev/src/hyperv-attachment/: hyperv-attachment.vcxproj  (+1 more)
injector/: CMakeLists.txt
interna/: CMakeLists.txt
interna/src/: dllmain.cpp  lazy_importer.hpp  xorstr.hpp
laith-km-driver/: Driver.sln  README.md
laith-km-driver/km/: km.inf  km.vcxproj  km.vcxproj.filters
launcher-server/backend/: package.json
launcher/app/: CMakeLists.txt
launcher/app/src/: advanced_protection.hpp  config.hpp  main.cpp  new_ui.hpp  obfuscation.hpp  protection.hpp
launcher/src/: main.cpp  modern_theme.hpp  new_ui.hpp  websocket_client.hpp
libraries/driver/: CMakeLists.txt  README.md  driver_mapper.cpp  driver_mapper.hpp  logger.hpp  shellcode.cpp  shellcode.hpp  vulnerable_drivers.cpp  vulnerable_drivers.hpp  workitem_executor.cpp  workitem_executor.hpp
libraries/driver/common/: ioctl_codes.h  types.h
libraries/driver/ring0/: CMakeLists.txt
libraries/driver/ring0/driver/: callbacks.c  callbacks.h  hwid.c  hwid.h  main.c  memory.c  memory.h  process.c  process.h
libraries/uiaccess/: uiaccess.cpp  uiaccess.hpp
offsets/: README.md
offsets/cpp/: animationsystem_dll.hpp  interfaces.hpp  materialsystem2_dll.hpp  rendersystemdx11_dll.hpp  resourcesystem_dll.hpp  scenesystem_dll.hpp  schemasystem_dll.hpp  server_dll.hpp  steamaudio_dll.hpp
offsets/csharp/: materialsystem2_dll.cs  offsets.cs  panorama_dll.cs  particles_dll.cs  scenesystem_dll.cs  soundsystem_dll.cs  steamaudio_dll.cs  vphysics2_dll.cs  worldrenderer_dll.cs
offsets/rust/: client_dll.rs  host_dll.rs  interfaces.rs  networksystem_dll.rs  panorama_dll.rs  pulse_system_dll.rs  resourcesystem_dll.rs  scenesystem_dll.rs  server_dll.rs  soundsystem_dll.rs  vphysics2_dll.rs  worldrenderer_dll.rs
output/: animationsystem_dll.rs  buttons.hpp  buttons.rs  engine2_dll.rs  host_dll.cs  host_dll.hpp  interfaces.cs  materialsystem2_dll.rs  offsets.hpp  pulse_system_dll.cs  pulse_system_dll.hpp  rendersystemdx11_dll.cs  resourcesystem_dll.cs  schemasystem_dll.cs  server_dll.cs  soundsystem_dll.hpp  worldrenderer_dll.hpp
output (5)/: animationsystem_dll.cs  animationsystem_dll.hpp  animationsystem_dll.rs  buttons.cs  buttons.hpp  buttons.rs  client_dll.cs  client_dll.hpp  client_dll.rs  engine2_dll.cs  engine2_dll.hpp  engine2_dll.rs  host_dll.cs  host_dll.hpp  host_dll.rs  info.json  interfaces.cs  interfaces.hpp  interfaces.rs  materialsystem2_dll.cs  materialsystem2_dll.hpp  materialsystem2_dll.rs  networksystem_dll.cs  networksystem_dll.hpp  networksystem_dll.rs  offsets.cs  offsets.hpp  offsets.rs  panorama_dll.cs  panorama_dll.hpp  panorama_dll.rs  particles_dll.cs  particles_dll.hpp  particles_dll.rs  pulse_system_dll.cs  pulse_system_dll.hpp  pulse_system_dll.rs  rendersystemdx11_dll.cs  rendersystemdx11_dll.hpp  rendersystemdx11_dll.rs  (+24 more)
scripts/: admin-panel.command  admin-simple.command
(+86 files in other folders)
