[package]
name = "externa-cs2"
version = "1.0.0"
edition = "2021"
authors = ["Externa Team"]
description = "External ESP for CS2 - Rust Edition (Based on Valthrun architecture)"

[dependencies]
# Windows API
windows = { version = "0.59", features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
]}

# UI (like Valthrun)
imgui = "0.12"
imgui-winit-support = "0.12"
winit = "0.30"

# Math
glam = "0.29"
nalgebra = "0.33"

# Utilities
parking_lot = "0.12"
once_cell = "1.20"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Pattern scanning
regex = "1.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "externa-cs2"
path = "src/main.rs"
