[package]
name = "externa-cs2"
version = "1.0.0"
edition = "2021"
authors = ["Externa Team"]
description = "External ESP for CS2 - Rust Edition (Based on Valthrun architecture)"

[dependencies]
# Windows API
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
]}

# Math
glam = "0.29"

# Utilities
parking_lot = "0.12"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "externa-cs2"
path = "src/main.rs"
