[package]
name = "externa-cs2-v2"
version = "2.0.0"
edition = "2021"

[dependencies]
# Math
glam = "0.29"
# Error handling
anyhow = "1.0"
# Logging
log = "0.4"
env_logger = "0.11"

# ImGui (stable versions from ProExt)
imgui = "0.11"
imgui-dx11-renderer = "0.8"

# Windows API
[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
