[package]
name = "externa-cs2-v2"
version = "2.0.0"
edition = "2021"

[dependencies]
glam = "0.29"
log = "0.4"
env_logger = "0.11"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
