[package]
name = "externa-rust-v2"
version = "2.3.0"
edition = "2021"

[dependencies]
# Windows API
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_System_Com",
    "Foundation_Numerics",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Imaging",
] }

# Math
glam = "0.29"

# Utilities
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
rand = "0.8"
chrono = "0.4"

# For dynamic offsets
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.9"

[profile.dev]
opt-level = 0
debug = true
codegen-units = 256
lto = false
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
