[package]
name = "externa-driver"
version = "1.0.0"
edition = "2021"
authors = ["Externa Team"]
description = "Kernel Driver for Externa CS2 (No WDK dependency)"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

# NO DEPENDENCIES - Pure FFI
[dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
